<resources>
    <string name="app_name">PDStreamline</string>
    <string name="codeTextView">条码号:</string>
    <string name="expTextView">保质期:</string>
    <string name="dopTextView">生产日期:</string>
    <string name="coordinateTextView">坐标:</string>
    <string name="inventoryTextView">库存:</string>
    <string name="search">查询</string>
    <string name="exp_range">保质期范围</string>
    <string name="promotion_offset">临期提前量</string>
    <string name="off_shelves_offset">下架提前量</string>
    <string name="add_timestream">添加</string>
    <string name="empty_date">0000-00-00</string>
    <string name="default_inventory">001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>